@@ -50,6 +50,7 @@
     </div>
     
     <button id="nextRound">Next Round</button>
+    <button id="resetGame">New Game</button>
     
 
     <script src="app.js"></script>
